Implement custom form

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,13 @@
 body {
   font-family: "Roboto", sans-serif;
 }
+
+.fade-in {
+  opacity: 1;
+  transition: opacity 0.3s ease-in;
+}
+
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
+}
